# vibe-trade-mcp

./: .dockerignore  .gitignore  AUTHENTICATION.md  DEPLOYMENT.md  Dockerfile  Makefile  PUBLISHING.md  README.md  pyproject.toml  test_resources.py
.github/workflows/: ci.yml
data/: AGENT_GUIDE.md  DISAMBIGUATION_QUESTIONS.md  SCHEMA_CAPABILITIES.md  archetype_schema.json  archetypes.json  common_defs.json  exit_archetype_schema.json  exit_archetypes.json  gate_archetype_schema.json  gate_archetypes.json  overlay_archetype_schema.json  overlay_archetypes.json
src/: __init__.py  main.py
src/api/: __init__.py  middleware.py  routes.py
src/db/: __init__.py  archetype_repository.py  archetype_schema_repository.py  card_repository.py  firestore_client.py  strategy_repository.py
src/models/: __init__.py  archetype.py  archetype_schema.py  card.py  strategy.py
src/scripts/: __init__.py  seed_archetypes.py
src/tools/: card_tools.py  errors.py  math_tools.py  resource_tools.py  strategy_tools.py  trading_tools.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_api_endpoints.py  test_card_tools.py  test_exit_cards.py  test_get_archetype_schema.py  test_get_archetypes.py  test_get_schema_example.py  test_helpers.py  test_main.py  test_math_tools_integration.py  test_strategy_tools.py  test_tools.py  test_trading_tools.py  test_validate_slots_draft.py  test_validate_strategy.py
